@@ -16,50 +16,93 @@
  * compile with -DZ_PREFIX. The "standard" zlib should be compiled without it.
  */
 #ifdef Z_PREFIX
-#  define deflateInit_          z_deflateInit_
-#  define deflate               z_deflate
-#  define deflateEnd            z_deflateEnd
-#  define inflateInit_          z_inflateInit_
-#  define inflate               z_inflate
-#  define inflateEnd            z_inflateEnd
-#  define deflateInit2_         z_deflateInit2_
-#  define deflateSetDictionary  z_deflateSetDictionary
-#  define deflateCopy           z_deflateCopy
-#  define deflateReset          z_deflateReset
-#  define deflateParams         z_deflateParams
-#  define deflateBound          z_deflateBound
-#  define deflatePrime          z_deflatePrime
-#  define inflateInit2_         z_inflateInit2_
-#  define inflateSetDictionary  z_inflateSetDictionary
-#  define inflateSync           z_inflateSync
-#  define inflateSyncPoint      z_inflateSyncPoint
-#  define inflateCopy           z_inflateCopy
-#  define inflateReset          z_inflateReset
-#  define inflateBack           z_inflateBack
-#  define inflateBackEnd        z_inflateBackEnd
-#  define compress              z_compress
-#  define compress2             z_compress2
-#  define compressBound         z_compressBound
-#  define uncompress            z_uncompress
-#  define adler32               z_adler32
-#  define crc32                 z_crc32
-#  define get_crc_table         z_get_crc_table
-#  define zError                z_zError
+#  define deflateInit_          Rz_deflateInit_
+#  define deflate               Rz_deflate
+#  define deflateEnd            Rz_deflateEnd
+#  define inflateInit_          Rz_inflateInit_
+#  define inflate               Rz_inflate
+#  define inflateEnd            Rz_inflateEnd
+#  define deflateInit2_         Rz_deflateInit2_
+#  define deflateSetDictionary  Rz_deflateSetDictionary
+#  define deflateCopy           Rz_deflateCopy
+#  define deflateReset          Rz_deflateReset
+#  define deflateParams         Rz_deflateParams
+#  define deflateBound          Rz_deflateBound
+#  define deflatePrime          Rz_deflatePrime
+#  define inflateInit2_         Rz_inflateInit2_
+#  define inflateSetDictionary  Rz_inflateSetDictionary
+#  define inflateSync           Rz_inflateSync
+#  define inflateSyncPoint      Rz_inflateSyncPoint
+#  define inflateCopy           Rz_inflateCopy
+#  define inflateReset          Rz_inflateReset
+#  define inflateBack           Rz_inflateBack
+#  define inflateBackEnd        Rz_inflateBackEnd
+#  define compress              Rz_compress
+#  define compress2             Rz_compress2
+#  define compressBound         Rz_compressBound
+#  define uncompress            Rz_uncompress
+#  define adler32               Rz_adler32
+#  define crc32                 Rz_crc32
+#  define get_crc_table         Rz_get_crc_table
+#  define zError                Rz_zError
 
-#  define alloc_func            z_alloc_func
-#  define free_func             z_free_func
-#  define in_func               z_in_func
-#  define out_func              z_out_func
-#  define Byte                  z_Byte
-#  define uInt                  z_uInt
-#  define uLong                 z_uLong
-#  define Bytef                 z_Bytef
-#  define charf                 z_charf
-#  define intf                  z_intf
-#  define uIntf                 z_uIntf
-#  define uLongf                z_uLongf
-#  define voidpf                z_voidpf
-#  define voidp                 z_voidp
+#  define alloc_func            Rz_alloc_func
+#  define free_func             Rz_free_func
+#  define in_func               Rz_in_func
+#  define out_func              Rz_out_func
+#  define Byte                  Rz_Byte
+#  define uInt                  Rz_uInt
+#  define uLong                 Rz_uLong
+#  define Bytef                 Rz_Bytef
+#  define charf                 Rz_charf
+#  define intf                  Rz_intf
+#  define uIntf                 Rz_uIntf
+#  define uLongf                Rz_uLongf
+#  define voidpf                Rz_voidpf
+#  define voidp                 Rz_voidp
+
+# define adler32_combine       	Rz_adler32_combine
+# define crc32_combine		Rz_crc32_combine
+# define deflateSetHeader      	Rz_deflateSetHeader
+# define deflateTune		Rz_deflateTune
+# define gzclearerr		Rz_gzclearerr
+# define gzclose		Rz_gzclose
+# define gzdirect		Rz_gzdirect
+# define gzdopen		Rz_gzdopen
+# define gzeof			Rz_gzeof
+# define gzerror		Rz_gzerror
+# define gzflush		Rz_gzflush
+# define gzgetc			Rz_gzgetc
+# define gzgets			Rz_gzgets
+# define gzopen			Rz_gzopen
+# define gzputc			Rz_gzputc
+# define gzputs			Rz_gzputs
+# define gzread			Rz_gzread
+# define gzrewind		Rz_gzrewind
+# define gzseek			Rz_gzseek
+# define gzsetparams		Rz_gzsetparams
+# define gztell			Rz_gztell
+# define gzungetc		Rz_gzungetc
+# define gzwrite		Rz_gzwrite
+# define inflateBackInit_      	Rz_inflateBackInit_
+# define inflate_fast		Rz_inflate_fast
+# define inflateGetHeader      	Rz_inflateGetHeader
+# define inflatePrime		Rz_inflatePrime
+# define inflate_table		Rz_inflate_table
+# define _tr_align		Rz__tr_align
+# define _tr_flush_block       	Rz__tr_flush_block
+# define _tr_init		Rz__tr_init
+# define _tr_stored_block      	Rz__tr_stored_block
+# define _tr_tally		Rz__tr_tally
+# define zcalloc		Rz_zcalloc
+# define zcfree			Rz_zcfree
+# define zlibCompileFlags      	Rz_zlibCompileFlags
+# define zlibVersion		Rz_zlibVersion
+# define _dist_code		Rz_dist_code
+# define _length_code		Rz_length_code
+# define z_errmsg		Rz_errmsg
+# define deflate_copyright	Rz_deflate_copyright 
+# define inflate_copyright	Rz_inflate_copyright 
 #endif
 
 #if defined(__MSDOS__) && !defined(MSDOS)
